# comfy-workflow-agent-ex

./: .env.example  API_DOCUMENTATION.md  BACKEND_README.md  EN.md  README.md  __init__.py  nzp2432.tmp  nzp3F5A.tmp  nzp6C.tmp  nzp7C06.tmp  nzpA184.tmp  pyproject.toml  requirements.txt  start_backend.py
backend/: action_history.py  config.py  main.py  models.py
backend/__pycache__/: __init__.cpython-311.pyc.1820967541936  action_history.cpython-311.pyc.1821019248816  config.cpython-311.pyc.1820983182256  main.cpython-311.pyc.1820967542064  models.cpython-311.pyc.1820984077232
backend/agent/: workflow_agent.py
backend/agent/__pycache__/: __init__.cpython-311.pyc.1821006149552  workflow_agent.cpython-311.pyc.1821005034048
backend/mcp/: tools.py
backend/routes/: actions.py  chat.py  config.py  workflow.py
backend/routes/__pycache__/: __init__.cpython-311.pyc.1820984076848  actions.cpython-311.pyc.1821019248560  chat.cpython-311.pyc.1820984077104  workflow.cpython-311.pyc.1821019246256
backend/services/: action_service.py  chat_service.py  config_service.py  workflow_service.py
backend/services/__pycache__/: __init__.cpython-311.pyc.1820984081840  action_service.cpython-311.pyc.1821018796608  chat_service.cpython-311.pyc.1820984197744  workflow_service.cpython-311.pyc.1821018794736
backend/tools/: action_tools.py  search_tools.py  workflow_analyzer.py
checkpoints/api_configs/: providers.json
database/: chat_history.db
ui/: package-lock.json  package.json
ui/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
web/: main.js  style.css
(+9 files in other folders)
