[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-workflow-agent"
version = "1.0.0"
description = "ComfyUI Workflow Agent Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.5",
    "langchain-anthropic>=0.2.3",
    "langchain-community>=0.3.5",
    "langgraph>=0.2.45",
    "langgraph-checkpoint>=0.2.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.2",
    "aiohttp>=3.10.10",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.3",
    "markdownify>=0.13.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "google-api-python-client>=2.149.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["ui*", "web*", "tests*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
